// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for the Logo component Should render a png and have unique className 1`] = `
<div>
  <div
    aria-label="CMS.gov Logo"
    class="application-logo-container beep-boop"
    role="img"
  >
    <img
      alt="CMS.gov Logo"
      aria-hidden="false"
      src="[object Object]"
      width="200"
    />
  </div>
</div>
`;

exports[`Tests for the Logo component Should render an svg 1`] = `
<div>
  <div
    aria-label="CMS.gov Logo"
    class="application-logo-container "
    role="img"
  >
    <img
      alt="CMS.gov Logo"
      aria-hidden="false"
      src="[object Object]"
      width="200"
    />
  </div>
</div>
`;
